<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ВПБ Курьер</string>

    <string name="press_back_again_to_exit">Нажмите еще раз для выхода</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!-- ACRA -->
    <string name="acra_dialog_text">Произошла непредвиденная ошибка. Пожалуйста, помогите нам исправить эту проблему, отправив отчет.</string>
    <string name="acra_toast_text">Ой! Видимо, что-то случилось</string>

    <!-- Common messages -->
    <string name="response_internet_error_msg">Проверьте, что интернет доступен, и попробуйте ещё раз.</string>
    <string name="response_error_msg_format">Ошибка при загрузке. (%s)</string>
    <string name="response_unknown_error">Ошибка при загрузке.</string>

    <!-- Login Activity -->
    <string name="login_hint">Логин</string>
    <string name="login_empty_error">Введите логин</string>
    <string name="password_empty_error">Введите пароль</string>
    <string name="logiin_progress_dialog_message">Выполняется вход…</string>
    <string name="login_account_is_blocked">Ваш аккаунт заблокирован. Свяжитесь с руководителем.</string>
    <string name="login_wrong_credentials">Неправильный логин или пароль.</string>
    <string name="login_error_dialog_title">Ошибка входа</string>

    <!-- Login Dialog -->
    <string name="login_dialog_title">Вход</string>
    <string name="login_dialog_message">Введите свои учетные данные. Сессия истекла</string>
    <string name="login_dialog_logout_button">Завершить сеанс</string>

    <!-- OrderList Activity -->
    <string name="order_list_activity_label">Встречи на сегодня</string>

    <string name="refresh_menu_item">Обновить</string>
    <string name="upload_images_menu_title">Отправить снимки</string>
    <string name="about_menu_item">О программе</string>
    <string name="logout_menu_title">Выйти</string>

    <string name="order_time_missed_format">%1$s−%2$s\n(пропущена)</string>
    <string name="order_time_remaining_format">%1$s−%2$s\n(осталось %3$s)</string>
    <string name="order_time_normal_format">%1$s−%2$s\n(%3$s до начала)</string>
    <string name="order_time_simple_format">с %1$s до %2$s</string>

    <string name="minutes_format">%1$d %2$s</string>
    <string name="one_minute">минута</string>
    <string name="few_minutes">минуты</string>
    <string name="many_minutes">минут</string>

    <string name="time_diff_more_then_1h">более часа</string>
    <string name="time_diff_more_then_1_5h">более 1,5 часов</string>
    <string name="time_diff_more_then_2h">более 2 часов</string>

    <string name="all_photos_uploaded">Отправлены все фотографии</string>
    <string name="one_photo">фотография</string>
    <string name="many_photos">фотографии</string>
    <string name="many_of_photos">фотографий</string>
    <string name="one_uploaded">отправлена</string>
    <string name="many_uploaded">оправлены</string>
    <string name="photos_not_uploaded_format">%1$s не %2$s</string>
    <string name="uploaded_n_of_m_photos_format">%1$s %2$d из %3$d %4$s</string>

    <string name="call_activity_failed">Не удалось запустить телефон</string>
    <string name="map_activity_failed">Не удалось запустить Гугл Карты</string>

    <string name="active_orders_section">Активные заказы</string>
    <string name="success_orders_section">Документы переданы</string>
    <string name="activated_orders_section">Карты активированы</string>
    <string name="failed_orders_section">Не удалось доставить</string>

    <string name="call_item_title">Позвонить</string>
    <string name="navigate_item_title">На карте</string>
    <string name="order_list_empty_message">Заявок нет</string>

    <string name="all_images_uploaded">Все фотографии отправлены</string>

    <!-- OrderDetails Activity -->
    <string name="order_details_activity_label_format">Детали заказа №%d</string>

    <string name="order_details_address_section">Адрес</string>
    <string name="order_details_time_section">Время</string>
    <string name="order_details_phone_section">Телефон</string>
    <string name="order_details_note_section_title">Заметка</string>

    <string name="order_status_submitted">Документы переданы</string>
    <string name="order_status_activated">Карта активирована</string>
    <string name="order_status_not_submitted">Передача документов не состоялась</string>
    <string name="order_status_new_format">Ожидает %s. Статус встречи:</string>
    <string name="order_details_additional_section">Прочее</string>
    <string name="order_details_type_section">Тип заявки</string>
    <string name="order_not_found">Заказ не найден</string>

    <string name="confirm_remove_image_dialog_title">Удалить?</string>
    <string name="unable_to_process_image">Не удалось обработать изображение</string>

    <string name="order_action_met">Cостоялась</string>
    <string name="order_action_close">Не состоялась</string>

    <string name="client_did_not_answer_the_phone">Клиент не отвечает на звонки</string>
    <string name="client_missed_meeting">Клиент не приехал</string>
    <string name="courier_missed_meeting">Я пропустил(а) встречу</string>
    <string name="client_forgot_passport">Клиент без паспорта</string>
    <string name="client_rejected_order">Отказ</string>
    <string name="agreement_can_not_be_signed">Договор не может быть подписан</string>

    <string name="reject_order_dialog_title">Выберите причину</string>

    <string name="confirm_dialog_title">Подтвердите изменение</string>
    <string name="confirm_reject_dialog_message_format">%1$s. Причина: %2$s.\nВнимание, после подтверждения изменения нельзя будет внести</string>
    <string name="met_with_client">Встреча состоялась, но договор не заключен</string>
    <string name="not_met_with_client">Встреча не состоялась</string>
    <string name="confirm_submit_dialog_message_format">Встреча состоялась. Клиент подтвердил желание выпустить карту.\nКлиент резидент: %1$s\nВносились правки: %2$s</string>

    <string name="met_result_documents_ok">Документы в порядке</string>
    <string name="met_result_cannot_be_signed">Договор не может быть подписан</string>

    <string name="client_resident_option">Клиент является резидентом</string>
    <string name="marks_option">Вносились правки</string>

    <string name="met_result_chooser_dialog_title">Результат встречи</string>
    <string name="final_options_dialog_title">Отметьте нужное</string>

    <string name="update_order_progess_dialog_message">Обновление заявки…</string>

    <string name="activate_card_button">Aктивировать карту</string>
    <string name="upload_progress_dialog_title_format">Отправка (осталось %d)</string>
    <string name="upload_progress_dialog_message_format">Отправляется изображение \"%1$s\" из заявки по адресу %2$s.</string>
    <string name="upload_progress_dialog_message_connecting">Подключение к серверу…</string>

    <string name="uploaded_result_format">Отправлено %1$d из %2$d</string>

    <string name="upload_progress_notification_title_format">Осталось отправить %d</string>
    <string name="upload_progress_notification_message_format">Отправка %d%%</string>

    <string name="order_note_empty"><i>Пусто</i></string>
    <string name="order_note_dialog_edittext_hint">Текст заметки</string>
    <string name="order_note_dialog_title">Заметка</string>
    <string name="order_note_save_failed">Не получилось сохранить. Проверьте, что SD-карта доступна.</string>

    <!-- Awards -->

    <string name="text_1_client_did_not_answer_the_phone">«Катя, возьми телефон. Это он, это он…»</string>
    <string name="text_2_client_did_not_answer_the_phone">Доставим тому, кто отвечает на звонки.</string>
    <string name="text_3_client_did_not_answer_the_phone">Что же он трубку не берет.</string>

    <string name="text_client_fault">Ну хорошо, одним заказом меньше.</string>
    <string name="text_client_would_cry">Клиент же будет плакать без карты.</string>
    <string name="text_first_completed_order">Поздравляю с первой успешной доставкой!</string>
    <string name="text_award_unlocked">Поздравляю с новым достижением! %d успешных доставок!</string>

    <string name="text_1_client_missed_meeting">Клиент, ты где? Ау-у!</string>
    <string name="text_2_client_missed_meeting">Ох уж эти пунктуальные клиенты.</string>

    <string name="text_1_courier_missed_meeting">Ну ничего, всякое бывает.</string>
    <string name="text_2_courier_missed_meeting">Другие заказы не пропустим.</string>
    <string name="text_3_courier_missed_meeting">Ладно, займемся другими заказами.</string>
    <string name="text_4_courier_missed_meeting">С кем не бывает.</string>

    <string name="text_1_client_forgot_passport">В школе бы ему сказали: «а голову ты не забыл?».</string>
    <string name="text_2_client_forgot_passport">Человек рассеянный с улицы бассейной.</string>

    <string name="text_1_client_rejected_order">Не понимают от чего отказываются.</string>
    <string name="text_2_client_rejected_order">Назакажут, а потом отказываются.</string>

    <string name="text_1_agreement_can_not_be_signed">ОК. Поехали дальше.</string>

    <string-array name="award_positive">
        <item>Отлично сработано!</item>
        <item>Здорово у тебя выходит!</item>
        <item>Ты сегодня в ударе!</item>
        <item>Отлично сработано!</item>
        <item>За такую работу должны премии давать.</item>
        <item>Еще одна успешная доставка!</item>
        <item>Как у тебя ловко получается.</item>
        <item>С тобой приятно работать.</item>
        <item>Клиент должен прыгать от счастья.</item>
        <item>Супер! Так держать.</item>
        <item>Не работник, а золото.</item>
        <item>Космическая доставка!</item>
        <item>Великолепно!</item>
        <item>Я тобой горжусь.</item>
        <item>Ты лучший курьер, с кем я работал.</item>
        <item>Хорошая работа!</item>
        <item>Круто наблюдать твою работу.</item>
        <item>То, что надо!</item>
        <item>Это была классная работа.</item>
        <item>Круто, дай пять!</item>
        <item>Это называется прекрасной доставкой.</item>
        <item>Ты, наверное, долго практиковался.</item>
        <item>Большое тебе спасибо.</item>
        <item>Настоящий мастер доставки.</item>
    </string-array>

    <string name="text_1_final_order_completed">Это была последняя доставка на сегодня!</string>
    <string name="text_2_final_order_completed">Расправился с последним заказом!</string>
    <string name="text_3_final_order_completed">Шикарно! Это была последняя доставка.</string>
    <string name="text_4_final_order_completed">Молодец! С заказами на сегодня все.</string>
    <string name="text_5_final_order_completed">После такого дня пора и отдохнуть.</string>
    <string name="text_6_final_order_completed">С заказами все. Ты как всегда на высоте!</string>

    <string name="courier_completed_orders_label">Успешных доставок</string>
    <string name="courier_completed_orders_today_label">За сегодня</string>

    <!-- About Dialog -->

    <string name="about_dialog_icons_reference">Использованы иконки следующих авторов c Noun Project: John Caserta, Shreya
        Chakravarty, Simon Child, Andrey Gerasimov, Matthew R. Miller, Rob Schill, Michael Rowe, Pedro Ramalho, Henry
        Ryder, Luis Prado, Stephen JB Thomas, iconoci, Scott Lewis, James Stone, Marwa Boukarim, Sergey Shmidt.
    </string>
    <string name="about_dialog_title">О программе</string>
    <string name="about_dialog_version">Версия приложения: %s</string>
    <string name="about_dialog_developed_by">Разработка компании iDa Mobile</string>

</resources>